--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace "com.whelksoft.flutter_native_timezone"
     compileSdkVersion 35
 
     sourceSets {
